<resources>
    <string name="app_name">Guinealogia Edicion Trivial</string>
    <string name="ingresar">INGRESAR</string>
    <string name="contrase_a">Contraseña</string>
    <string name="email">Email</string>
    <string name="registrar">REGISTRAR</string>
    <string name="login">login</string>
    <string name="conectar">conectar</string>
    <string name="click_para_ingresar">Click para ingresar</string>
    <string name="click_para_registrar">CLICK PARA REGISTRAR</string>
    <string name="desconectar">DESCONECTAR</string>
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>
    <string name="foto">Foto</string>
    <string name="telefono">Telefono</string>
    <string name="ciudad">Ciudad</string>
    <string name="pa_s">País</string>
    <string name="correct_answer">RESPUESTA CORRECTA: %1$s</string>
    <string name="tiempo">tiempo</string>
    <string name="aciertos">Aciertos: %1$d</string>
    <string name="fallos">Fallos: %1$d</string>
    <string name="puntuacion">Puntuación: %1$d</string>
    <string name="tipo_dispositivo">Tipo de Dispositivo</string>
    <string name="Dispositivo"> Dispositivo</string>
    <string-array name="tipo_dispositivo_options">
        <item>Apple</item>
        <item>Android</item>
        <string-array name="countries_array">
            <item>Afganistán</item>
            <item>Albania</item>
            <item>Alemania</item>
            <item>Andorra</item>
            <item>Angola</item>
            <item>Antigua y Barbuda</item>
            <item>Arabia Saudita</item>
            <item>Argelia</item>
            <item>Argentina</item>
            <item>Armenia</item>
            <item>Australia</item>
            <item>Austria</item>
            <item>Azerbaiyán</item>
            <item>Bahamas</item>
            <item>Bahréin</item>
            <item>Bangladés</item>
            <item>Barbados</item>
            <item>Bélgica</item>
            <item>Belice</item>
            <item>Benín</item>
            <item>Bielorrusia</item>
            <item>Birmania</item>
            <item>Bolivia</item>
            <item>Bosnia y Herzegovina</item>
            <item>Botsuana</item>
            <item>Brasil</item>
            <item>Brunéi</item>
            <item>Bulgaria</item>
            <item>Burkina Faso</item>
            <item>Burundi</item>
            <item>Bután</item>
            <item>Cabo Verde</item>
            <item>Camboya</item>
            <item>Camerún</item>
            <item>Canadá</item>
            <item>Catar</item>
            <item>Chad</item>
            <item>Chile</item>
            <item>China</item>
            <item>Chipre</item>
            <item>Ciudad del Vaticano</item>
            <item>Colombia</item>
            <item>Comoras</item>
            <item>Corea del Norte</item>
            <item>Corea del Sur</item>
            <item>Costa de Marfil</item>
            <item>Costa Rica</item>
            <item>Croacia</item>
            <item>Cuba</item>
            <item>Dinamarca</item>
            <item>Dominica</item>
            <item>Ecuador</item>
            <item>Egipto</item>
            <item>El Salvador</item>
            <item>Emiratos Árabes Unidos</item>
            <item>Eritrea</item>
            <item>Eslovaquia</item>
            <item>Eslovenia</item>
            <item>España</item>
            <item>Estados Unidos</item>
            <item>Estonia</item>
            <item>Etiopía</item>
            <item>Filipinas</item>
            <item>Finlandia</item>
            <item>Fiyi</item>
            <item>Francia</item>
            <item>Gabón</item>
            <item>Gambia</item>
            <item>Georgia</item>
            <item>Ghana</item>
            <item>Granada</item>
            <item>Grecia</item>
            <item>Guatemala</item>
            <item>Guinea</item>
            <item>Guinea-Bisáu</item>
            <item>Guinea Ecuatorial</item>
            <item>Guyana</item>
            <item>Haití</item>
            <item>Honduras</item>
            <item>Hungría</item>
            <item>India</item>
            <item>Indonesia</item>
            <item>Irak</item>
            <item>Irán</item>
            <item>Irlanda</item>
            <item>Islandia</item>
            <item>Islas Marshall</item>
            <item>Islas Salomón</item>
            <item>Israel</item>
            <item>Italia</item>
            <item>Jamaica</item>
            <item>Japón</item>
            <item>Jordania</item>
            <item>Kazajistán</item>
            <item>Kenia</item>
            <item>Kirguistán</item>
            <item>Kiribati</item>
            <item>Kuwait</item>
            <item>Laos</item>
            <item>Lesoto</item>
            <item>Letonia</item>
            <item>Líbano</item>
            <item>Liberia</item>
            <item>Libia</item>
            <item>Liechtenstein</item>
            <item>Lituania</item>
            <item>Luxemburgo</item>
            <item>Madagascar</item>
            <item>Malasia</item>
            <item>Malaui</item>
            <item>Maldivas</item>
            <item>Malí</item>
            <item>Malta</item>
            <item>Marruecos</item>
            <item>Mauricio</item>
            <item>Mauritania</item>
            <item>México</item>
            <item>Micronesia</item>
            <item>Moldavia</item>
            <item>Mónaco</item>
            <item>Mongolia</item>
            <item>Montenegro</item>
            <item>Mozambique</item>
            <item>Namibia</item>
            <item>Nauru</item>
            <item>Nepal</item>
            <item>Nicaragua</item>
            <item>Níger</item>
            <item>Nigeria</item>
            <item>Noruega</item>
            <item>Nueva Zelanda</item>
            <item>Omán</item>
            <item>Países Bajos</item>
            <item>Pakistán</item>
            <item>Palaos</item>
            <item>Panamá</item>
            <item>Papúa Nueva Guinea</item>
            <item>Paraguay</item>
            <item>Perú</item>
            <item>Polonia</item>
            <item>Portugal</item>
            <item>Reino Unido</item>
            <item>República Centroafricana</item>
            <item>República Checa</item>
            <item>República del Congo</item>
            <item>República Democrática del Congo</item>
            <item>República Dominicana</item>
            <item>República de Macedonia</item>
            <item>República de Sudán del Sur</item>
            <item>República de Sudán</item>
            <item>Ruanda</item>
            <item>Rumania</item>
            <item>Rusia</item>
            <item>Samoa</item>
            <item>San Cristóbal y Nieves</item>
            <item>San Marino</item>
            <item>San Vicente y las Granadinas</item>
            <item>Santa Lucía</item>
            <item>Santo Tomé y Príncipe</item>
            <item>Senegal</item>
            <item>Serbia</item>
            <item>Seychelles</item>
            <item>Sierra Leona</item>
            <item>Singapur</item>
            <item>Siria</item>
            <item>Somalia</item>
            <item>Sri Lanka</item>
            <item>Suazilandia</item>
            <item>Sudáfrica</item>
            <item>Suecia</item>
            <item>Suiza</item>
            <item>Surinam</item>
            <item>Tailandia</item>
            <item>Taiwán</item>
            <item>Tanzania</item>
            <item>Tayikistán</item>
            <item>Togo</item>
            <item>Tonga</item>
            <item>Trinidad y Tobago</item>
            <item>Túnez</item>
            <item>Turkmenistán</item>
            <item>Turquía</item>
            <item>Tuvalu</item>
            <item>Ucrania</item>
            <item>Uganda</item>
            <item>Uruguay</item>
            <item>Uzbekistán</item>
            <item>Vanuatu</item>
            <item>Venezuela</item>
            <item>Vietnam</item>
            <item>Yemen</item>
            <item>Yibuti</item>
            <item>Zambia</item>
            <item>Zimbabue</item>
        </string-array>

    </string-array>



</resources>