<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/trivialbackground"
    tools:context=".Register">




    <TextView
        android:text="REGISTRAR USUARIO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginBottom="30dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nombre"
        android:hint="@string/nombre"
        android:layout_width="300dp"
        android:layout_height="wrap_content"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:hint="@string/email"
        android:layout_width="300dp"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/contrase_a"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/telefono"
        android:hint="@string/telefono"
        android:layout_width="300dp"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/barrio"
        android:hint="Barrio"
        android:layout_width="300dp"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ciudad"
        android:hint="@string/ciudad"
        android:layout_width="300dp"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/pais"
        android:hint="@string/pa_s"
        android:layout_width="300dp"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="280dp"
        android:layout_height="75dp"
        android:text="@string/registrar"
        android:gravity="center"
        android:background="@drawable/radio_selector_blue"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="6"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        app:strokeWidth="3dp"
        />


</LinearLayout>